--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>3D旋转炫酷图片集</title>
 		<meta charset="utf-8">
 		<meta name="Author" content="潭州学院-阿飞老师">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<link rel="stylesheet" type="text/css" href="css/index.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<!-- 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+ -->		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<style type='text/css'>
 			*{ margin:0; padding:0;}
 			
@@ -35,18 +36,10 @@
 				<div class="s-dec" id="img_data"></div>
 			</div>
 		</div>
-
 		<div id="frame">
 			<iframe src="" frameborder='0' width="100%" height="100%"></iframe>
 			<div id="back">Back</div>
 		</div>
-
-		<script type="text/javascript">
-			var demoArr = [
-				{title:'日常',author:'阿军',date:'2016.03.03',kt:'秀军日常记录',src:'demo/3D drag'},
-				
-			];
-		</script>
 		<script type="text/javascript" src="js/index.js"></script>
 
 		
