--- a/index.html
+++ b/index.html
@@ -1,92 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <script src="jquery-3.3.1.js"></script>
-    <!-- jQuery is required -->
-    <script src="viewer.js"></script>
-    <!-- Viewer.js is required -->
-    <link href="viewer.css" rel="stylesheet" />
-    <script src="jquery-viewer.js"></script>
-    <style>
-      ul,
-      li {
-        list-style: none;
-      }
-      ul {
-        display: block;
-      }
-      ul > li {
-        display: inline-block;
-      }
-      img {
-        width: 200px;
-      }
-    </style>
-  </head>
-  <body>
-    <div>
-      <ul>
-        <li>
-          <img
-            class="images"
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112355&di=05f887ba4bc6d54854183a31d76fd1df&imgtype=0&src=http%3A%2F%2Fpic2.ooopic.com%2F12%2F40%2F58%2F18bOOOPIC9c.jpg"
-            alt="Picture 1"
-          />
-          <img
-            class="images"
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112354&di=5ae6b00f4a2dd2f4398c167b6c387528&imgtype=0&src=http%3A%2F%2Fwx4.sinaimg.cn%2Flarge%2F006VtoKely1fpx4ijwzk0j30dw0dwju4.jpg"
-            alt="Picture 2"
-          />
-        </li>
-        <li>
-          <img
-            class="images"
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112354&di=5ae6b00f4a2dd2f4398c167b6c387528&imgtype=0&src=http%3A%2F%2Fwx4.sinaimg.cn%2Flarge%2F006VtoKely1fpx4ijwzk0j30dw0dwju4.jpg"
-            alt="Picture 2"
-          />
-        </li>
-        <li>
-          <img
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112354&di=a7a8e27620b4122803306a91ff6a6c1e&imgtype=0&src=http%3A%2F%2Ftupian.qqjay.com%2Fu%2F2017%2F1221%2F7_143642_9.jpg"
-            alt="Picture 3"
-          />
-        </li>
-      </ul>
-      <hr />
-      <h3>群组浏览</h3>
-      <ul class="preview">
-        <li>
-          <img
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112355&di=05f887ba4bc6d54854183a31d76fd1df&imgtype=0&src=http%3A%2F%2Fpic2.ooopic.com%2F12%2F40%2F58%2F18bOOOPIC9c.jpg"
-            alt="Picture 1"
-          />
-          <img
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112354&di=5ae6b00f4a2dd2f4398c167b6c387528&imgtype=0&src=http%3A%2F%2Fwx4.sinaimg.cn%2Flarge%2F006VtoKely1fpx4ijwzk0j30dw0dwju4.jpg"
-            alt="Picture 2"
-          />
-        </li>
-        <li>
-          <img
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112354&di=5ae6b00f4a2dd2f4398c167b6c387528&imgtype=0&src=http%3A%2F%2Fwx4.sinaimg.cn%2Flarge%2F006VtoKely1fpx4ijwzk0j30dw0dwju4.jpg"
-            alt="Picture 2"
-          />
-        </li>
-        <li>
-          <img
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1546495112354&di=a7a8e27620b4122803306a91ff6a6c1e&imgtype=0&src=http%3A%2F%2Ftupian.qqjay.com%2Fu%2F2017%2F1221%2F7_143642_9.jpg"
-            alt="Picture 3"
-          />
-        </li>
-      </ul>
-    </div>
-    <script>
-      // View a list of images
-      $('.images').viewer()
-      $('.preview').viewer()
-    </script>
-  </body>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>3D旋转炫酷图片集</title>
+		<meta charset="utf-8">
+		<meta name="Author" content="潭州学院-阿飞老师">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<!-- 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+ -->		<link rel="stylesheet" type="text/css" href="css/index.css" />
+		<style type='text/css'>
+			*{ margin:0; padding:0;}
+			
+		</style>
+		<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
+		<script type="text/javascript" src="js/jquery.mousewheel.js"></script>
+		
+
+	</head>
+	<body>
+		
+		<div id="wrap">
+			<ul id="main">
+			</ul>
+
+			<ul id="styleBtn">
+				<li>Table</li>
+				<li>Sphere</li>
+				<li>Helix</li>
+				<li>Grid</li>
+			</ul>
+
+			<div id="show">
+				<div class="s-title" >主题</div>
+				<div class="s-img" id="tata"></div>
+				<div class="s-author">个人信息资料</div>
+				<div class="s-dec" id="img_data"></div>
+			</div>
+		</div>
+		<div id="frame">
+			<iframe src="" frameborder='0' width="100%" height="100%"></iframe>
+			<div id="back">Back</div>
+		</div>
+		<script type="text/javascript" src="js/index.js"></script>
+
+		
+		
+	</body>
 </html>
