--- a/index.html
+++ b/index.html
@@ -4,66 +4,43 @@
 		<title>3D旋转炫酷图片集</title>
 		<meta charset="utf-8">
 		<meta name="Author" content="潭州学院-阿飞老师">
- 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<!-- 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+ -->		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<style type='text/css'>
 			*{ margin:0; padding:0;}
-			.imgshow{display: none;background: rgba(0, 0, 0, .5);position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 2019521;}
-.swiperbox{height: 100vh;z-index: 3;background: #000;}
-.swiperbox img{width: initial;position: relative;z-index: 2;}
-.swiper-zoom-container:before{width: 100%;height: 100%;content: ' ';position: absolute;z-index: 1;display: block;top: 0;left: 0;cursor: pointer;}
-.closebtn{position: absolute;z-index: 22;background: url(../images/newclose.png) no-repeat 11px 0px;width: 60px;height: 60px;bottom: 0;left: 10px;background-size: 40px;}
-
+			
 		</style>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.1.min.js"></script>
-		
+		<script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
+		<script type="text/javascript" src="js/jquery.mousewheel.js"></script>
 		
 
 	</head>
 	<body>
-		<div class="txtcont">
-			<img src="https://www.codelovers.cn/uploads/20190110/1547110586940653.png" >
-			<img src="https://www.codelovers.cn/static/Home/images/404.jpg" >
-		</div>
-		<div class="imgshow">
-			<div class="swiper-container swiperbox">
-				<div class="swiper-wrapper">
-					
-				</div>
-				<div class="closebtn">
-					
-				</div>
+		
+		<div id="wrap">
+			<ul id="main">
+			</ul>
+
+			<ul id="styleBtn">
+				<li>Table</li>
+				<li>Sphere</li>
+				<li>Helix</li>
+				<li>Grid</li>
+			</ul>
+
+			<div id="show">
+				<div class="s-title" >主题</div>
+				<div class="s-img" id="tata"></div>
+				<div class="s-author">个人信息资料</div>
+				<div class="s-dec" id="img_data"></div>
 			</div>
 		</div>
-		
-		 
-		
-	<script type="text/javascript">
-		$('.txtcont img').each(function () {
-		    $(this).attr('data-imgsrc', $(this).index('.txtcont img'))
-		    var url = $(this).attr('src')
-		    $('.imgshow .swiper-wrapper').append('<div class="swiper-slide"> <div class="swiper-zoom-container"><img src="'+url+'"></div></div>')
-		})
-		$('.txtcont img').click(function () {
-		    var index = $(this).attr('data-imgsrc');
-		    $('.imgshow').fadeIn();
-		    var mySwiper = new Swiper('.swiperbox', {
-		        zoom: {
-		            toggle: false,
-		        },
-		    })
-		    mySwiper.update();
-		    if (index != 0) {
-		        mySwiper.slideTo(index, 0, true);
-		    } else {
-		        $('.swiperbox .swiper-wrapper').css({ 'transform': 'translate3d(0, 0px, 0px)' })
-		    }
-		})
-		$('.closebtn').on('click',function(){
-		    $('.imgshow').fadeOut();
-		})
-	</script>	
-
+		<div id="frame">
+			<iframe src="" frameborder='0' width="100%" height="100%"></iframe>
+			<div id="back">Back</div>
+		</div>
+		<script type="text/javascript" src="js/index.js"></script>
 
 		
 		
