--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>3D旋转炫酷图片集</title>
+		<title>若一图片专集</title>
 		<meta charset="utf-8">
 		<meta name="Author" content="潭州学院-阿飞老师">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
